--- a/src/components/Header/Navbar.css
+++ b/src/components/Header/Navbar.css
@@ -6,6 +6,9 @@
 .nav-item {
     margin: 1rem;
     font-weight: 600;
+    font-size: 1.4rem;
+    justify-content: space-around;
+    color: white;
 }
 .header-container {
     display: flex;
