--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,7 @@
   min-height: 100vh;
   display: flex;
   justify-content: center;
+  background-image: url('https://images.unsplash.com/photo-1554147090-e1221a04a025?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1631&q=80');
+  background-size: cover;
+  flex-direction: column;
 }
