--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -1,11 +1,11 @@
 .search-input {
-    width: 100%;
     border-radius: 8rem;
     font-size: 1.4rem;
     padding-top: 1rem;
     padding-bottom: 1rem;
     padding-left: 3rem;
     padding-right: 3rem;
+    border: none;
 }
 .search-input:focus {
     outline:none;
