--- a/src/components/Item/Item.css
+++ b/src/components/Item/Item.css
@@ -3,6 +3,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    margin: 1rem;
 }
 .icon {
     font-size: 4rem;
@@ -14,4 +15,8 @@
 }
 .title {
     font-size: 1.2rem;
+}
+.app-container {
+    margin: 2rem;
+    display: flex;
 }
