--- a/src/components/Search/Search.css
+++ b/src/components/Search/Search.css
@@ -6,6 +6,7 @@
     padding-left: 3rem;
     padding-right: 3rem;
     border: none;
+    margin: none;
 }
 .search-input:focus {
     outline:none;
